# Plastic-frame

./: .pre-commit-config.yaml  README.md  pyproject.toml
Note/GitNote/: GitNote.md
Note/VimNote/: VimNote.md
OpenCv_test/: Opencv.py
Study_schedule/: 1.30.docx
guide/: dev-config.md  nonemoji.md
tests/: test.txt
